# apex

./: Cargo.toml
src/: main.rs  notification.rs  screen.rs  sysinfo.rs
