[package]
name = "apex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi =  "2.4.1"
embedded-graphics = "0.8.1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.29.10"
dbus-tokio = "0.7.6"
dbus = "0.9.7"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
anyhow = "1.0"
bitvec = "1.0.1"